[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.2"
license = "MIT"

[workspace.dependencies]
noworkers = { path = "crates/noworkers" }

anyhow = { version = "1.0.71" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
