[package]
name = "noworkers"
edition = "2024"
readme = "../../README.md"
version.workspace = true
license.workspace = true
repository = "https://git.kjuulh.io/kjuulh/noworkers"
authors = ["kjuulh <contact@kasperhermansen.com>"]
description = "A small asyncronous worker pool manages thread pool limiting, cancellation and error propogation, inspired by golangs errgroup (requires tokio)"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tokio-util = "0.7.15"
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
